# autolabeling

./: .gitignore  CMakeLists.txt  README_AUTOLABELING.md  demo_autolabeling.cpp  example_usage.cpp  main.cpp  main_autolabeling.cpp  test_provider.cpp
images/: 1.txt  3.txt  4.txt  ANS_Class.json  depo.txt  images.txt
include/nn/: autobackend.h  onnx_model_base.h
include/utils/: autolabeling.h  loadmodel.h  ops.h  visualization.h
onnxruntime/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
onnxruntime/lib/pkgconfig/: libonnxruntime.pc
opencv/lib/: libopencv_calib3d.so.4.12.0  libopencv_features2d.so.4.12.0  libopencv_flann.so.4.12.0  libopencv_highgui.so.4.12.0  libopencv_ml.so.4.12.0  libopencv_objdetect.so.4.12.0  libopencv_photo.so.4.12.0  libopencv_stitching.so.4.12.0  libopencv_video.so.4.12.0  libopencv_videoio.so.4.12.0
opencv/lib/cmake/opencv4/: OpenCVConfig.cmake
opencv/share/licenses/opencv4/: ippiw-support.txt
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  autolabeling.cpp  common.cpp  loadmodel.cpp  ops.cpp  visualization.cpp
